# AuthFile

./: README.md  app.py  config.py  pyproject.toml  requirements.txt
controllers/: main_controller.py  routes.py
forms/: forms.py
instance/: app.db  authfile.db
models/: __init__.py  documento_repository.py  empresa_repository.py  item_repository.py
objects/: document_processor.py  documento.py  empresa.py  item.py
objects/ai/: __init__.py  document_processor.py  ocr_processor.py
static/css/: flash-msg.css
templates/: about.html  base.html  help.html  historic.html  index.html  login.html  menu.html  navbar.html  result.html  upload.html  user_info.html
tests/: test_CRUD_empresa.py  test_document_process.py  test_document_processor.py  test_main_controller.py  test_ocr.py  tests_database.py
utils/: pdf_extractor.py
